--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "^13.4.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.1.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.13.2",
