--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "next": "^13.4.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
-    "react-code-blocks": "^0.1.0",
     "react-dom": "^18.2.0",
+    "react-syntax-highlighter": "^15.5.0",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
