--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "@types/react-syntax-highlighter": "^15.5.7",
     "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.41.0",
